--- a/references.bib
+++ b/references.bib
@@ -270,3 +270,13 @@
   year={1992},
   publisher={American Psychological Association}
 }
+
+@article{trepte2017social,
+  title={Social identity theory and self-categorization theory},
+  author={Trepte, Sabine and Loy, Laura S},
+  journal={The international encyclopedia of media effects},
+  volume={63},
+  pages={1--13},
+  year={2017},
+  publisher={Wiley Hoboken, NJ}
+}
