--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,9 @@
 ---
 title: "index"
+author: 
+    name: Michele Garbelotto
+    email: garbelotto.michele@email.com
+date: today
 format: 
   html:
     self-contained: true
