--- a/index.qmd
+++ b/index.qmd
@@ -1,7 +1,8 @@
 ---
 title: "index"
-author: Michele Garbelotto
-email: garbelotto.michele@email.com
+author: 
+    name: "Michele Garbelotto"
+    email: "garbelotto.michele@email.com"
 date: today
 format: 
   html:
