--- a/index.qmd
+++ b/index.qmd
@@ -1,16 +1,17 @@
 ---
 title: "index"
-author: 
-    name: "Michele Garbelotto"
-    email: "garbelotto.michele@email.com"
+author:
+  - name: Michele Garbelotto
+    email: garbelotto.michele@email.com
 date: today
+
 format: 
   html:
     self-contained: true
-    toc: true                 
-    toc-location: left      
+    toc: true
+    toc-location: left
     theme:
-      light: minty 
+      light: minty
       dark: superhero
 ---
 
